# [#24255] Fix background color in high contrast batch fieldsets. Thanks Andrea.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@20252 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/hathor/css/colour_blue.css
+++ b/administrator/templates/hathor/css/colour_blue.css
@@ -757,6 +757,13 @@ a.saveorder.inactive {
 }
 
 /**
+ * Saving order icon styling in admin tables
+ */
+fieldset.batch {
+	background: #fff;
+}
+
+/**
  * Button styling
  */
 button {
